--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/danielGalvao/mean-aula#readme",
   "dependencies": {
+    "consign": "^0.1.2",
     "express": "^4.13.3"
   }
 }
